Добавяне на теорията
Добавих теорията. Предстои добавянето на експериментите. Също може да измисля по-интересен дизайн на теорията. Идея за тестовете.

--- a/ePlatform/app/Resources/views/projects/electricity.html.twig
+++ b/ePlatform/app/Resources/views/projects/electricity.html.twig
@@ -59,7 +59,7 @@
     </header>
 
 
-    <section id="theory" class="portfolio">
+    <section id="theory" >
         <div class="container">
             <h2 class="text-center text-uppercase text-secondary mb-0">Тheory</h2>
             <hr class="star-dark mb-5">
