--- a/ePlatform/app/Resources/views/tests/edit.html.twig
+++ b/ePlatform/app/Resources/views/tests/edit.html.twig
@@ -72,7 +72,7 @@
                     <legend>Edit Post</legend>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="test_title">Post Title</label>
+                        <label class="col-sm-4 control-label" for="test_title">Test Title</label>
                         <div class="col-sm-4 ">
                             <input type="text" class="form-control" id="test_title" placeholder="Post Title"
                                    name="test[title]" value="{{ test.title }}">
