--- a/ePlatform/app/Resources/views/tests/tests.html.twig
+++ b/ePlatform/app/Resources/views/tests/tests.html.twig
@@ -65,12 +65,12 @@
                 </svg>
                 Тестове</a></li>
         <li><a href="{{ path('myTests') }}">
-                <svg class="glyph stroked app-window">
+                <svg class="glyph stroked pencil">
                     <use xlink:href="#stroked-app-window"></use>
                 </svg>
                 Моите тестове</a></li>
         <li><a href="{{ path('test_create') }}">
-                <svg class="glyph stroked app-window">
+                <svg class="glyph stroked pencil">
                     <use xlink:href="#stroked-app-window"></use>
                 </svg>
                 Създай тест</a></li>
