--- a/ePlatform/app/Resources/views/projects/optics.html.twig
+++ b/ePlatform/app/Resources/views/projects/optics.html.twig
@@ -64,8 +64,34 @@
             <h2 class="text-center text-uppercase text-secondary mb-0">Тheory</h2>
             <hr class="star-dark mb-5">
             <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <p class="lead mb-0"> Neshto tam</p>
+                <div class="col-md-6 col-lg-4">
+                    <a class="portfolio-item d-block mx-auto" href="#vidoveleshti">
+                        <h3>Видове лещи</h3>
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <a class="portfolio-item d-block mx-auto" href="#elementinaleshtite">
+                        <h3>Елементи на лещите</h3>
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <a class="portfolio-item d-block mx-auto" href="#hodnaluchite">
+                        <h3>Ход на лъчите</h3>
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <a class="portfolio-item d-block mx-auto" href="#obraz">
+                        <h3>Построяване на образ при лещите</h3>
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <a class="portfolio-item d-block mx-auto" href="#ured">
+                        <h3>Окото като Оптичен уред</h3>
+                    </a>
                 </div>
             </div>
         </div>
@@ -115,6 +141,175 @@
         </a>
     </div>
 
+    <div class="portfolio-modal mfp-hide" id="vidoveleshti">
+        <div class="portfolio-modal-dialog bg-white">
+            <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+                <i class="fa fa-3x fa-times"></i>
+            </a>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-secondary text-uppercase mb-0">Видове лещи</h2>
+                        <hr class="star-dark mb-5">
+                        <p class="mb-5">В центъра на всеки атом има ядро, чиито размери са много по-малки от самия атом.
+                            В състава на ядрото участват частици, наречени протони, които имат положителен електричен заряд.
+                            Затова и ядрото, като цяло, има положителен заряд. Около ядрото се движат друг вид частици - електрони.
+                            Електронът е най-малката частица в атома и има отрицателен заряд.</p>
+
+                        <p class="mb-5">Електричните заряди са два вида, които условно наричаме положителни /+/ и отрицателни /-/.
+                            Два положителни или два отрицателни заряда се отблъскват, а положителен и отрицателен заряд се привличат. </p>
+
+                        <p class="mb-5">Електричният заряд е физична величина, която се означава с буквата q.
+                            Единицата за електричен заряд се нарича кулон и се означава с главна буква С.</p>
+
+                        <p class="mb-5">Големината на електричния заряд на електрона се нарича елементарен електричен заряд.
+                            Това е най-малкият електричен заряд, който една частица или тяло може да има.<br/>
+                            <img src="{{ asset('img/portfolio/electricity/formula_zarqd.png') }}" width="300" height="100"/>
+                        </p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                            <i class="fa fa-close"></i>
+                            Close</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal mfp-hide" id="elementinaleshtite">
+        <div class="portfolio-modal-dialog bg-white">
+            <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+                <i class="fa fa-3x fa-times"></i>
+            </a>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-secondary text-uppercase mb-0">Елементи на лещите</h2>
+                        <hr class="star-dark mb-5">
+                        <p class="mb-5">В центъра на всеки атом има ядро, чиито размери са много по-малки от самия атом.
+                            В състава на ядрото участват частици, наречени протони, които имат положителен електричен заряд.
+                            Затова и ядрото, като цяло, има положителен заряд. Около ядрото се движат друг вид частици - електрони.
+                            Електронът е най-малката частица в атома и има отрицателен заряд.</p>
+
+                        <p class="mb-5">Електричните заряди са два вида, които условно наричаме положителни /+/ и отрицателни /-/.
+                            Два положителни или два отрицателни заряда се отблъскват, а положителен и отрицателен заряд се привличат. </p>
+
+                        <p class="mb-5">Електричният заряд е физична величина, която се означава с буквата q.
+                            Единицата за електричен заряд се нарича кулон и се означава с главна буква С.</p>
+
+                        <p class="mb-5">Големината на електричния заряд на електрона се нарича елементарен електричен заряд.
+                            Това е най-малкият електричен заряд, който една частица или тяло може да има.<br/>
+                            <img src="{{ asset('img/portfolio/electricity/formula_zarqd.png') }}" width="300" height="100"/>
+                        </p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                            <i class="fa fa-close"></i>
+                            Close</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal mfp-hide" id="hodnaluchite">
+        <div class="portfolio-modal-dialog bg-white">
+            <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+                <i class="fa fa-3x fa-times"></i>
+            </a>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-secondary text-uppercase mb-0">Ход на лъчите</h2>
+                        <hr class="star-dark mb-5">
+                        <p class="mb-5">В центъра на всеки атом има ядро, чиито размери са много по-малки от самия атом.
+                            В състава на ядрото участват частици, наречени протони, които имат положителен електричен заряд.
+                            Затова и ядрото, като цяло, има положителен заряд. Около ядрото се движат друг вид частици - електрони.
+                            Електронът е най-малката частица в атома и има отрицателен заряд.</p>
+
+                        <p class="mb-5">Електричните заряди са два вида, които условно наричаме положителни /+/ и отрицателни /-/.
+                            Два положителни или два отрицателни заряда се отблъскват, а положителен и отрицателен заряд се привличат. </p>
+
+                        <p class="mb-5">Електричният заряд е физична величина, която се означава с буквата q.
+                            Единицата за електричен заряд се нарича кулон и се означава с главна буква С.</p>
+
+                        <p class="mb-5">Големината на електричния заряд на електрона се нарича елементарен електричен заряд.
+                            Това е най-малкият електричен заряд, който една частица или тяло може да има.<br/>
+                            <img src="{{ asset('img/portfolio/electricity/formula_zarqd.png') }}" width="300" height="100"/>
+                        </p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                            <i class="fa fa-close"></i>
+                            Close</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal mfp-hide" id="obraz">
+        <div class="portfolio-modal-dialog bg-white">
+            <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+                <i class="fa fa-3x fa-times"></i>
+            </a>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-secondary text-uppercase mb-0">Построяване на образ при лещите</h2>
+                        <hr class="star-dark mb-5">
+                        <p class="mb-5">В центъра на всеки атом има ядро, чиито размери са много по-малки от самия атом.
+                            В състава на ядрото участват частици, наречени протони, които имат положителен електричен заряд.
+                            Затова и ядрото, като цяло, има положителен заряд. Около ядрото се движат друг вид частици - електрони.
+                            Електронът е най-малката частица в атома и има отрицателен заряд.</p>
+
+                        <p class="mb-5">Електричните заряди са два вида, които условно наричаме положителни /+/ и отрицателни /-/.
+                            Два положителни или два отрицателни заряда се отблъскват, а положителен и отрицателен заряд се привличат. </p>
+
+                        <p class="mb-5">Електричният заряд е физична величина, която се означава с буквата q.
+                            Единицата за електричен заряд се нарича кулон и се означава с главна буква С.</p>
+
+                        <p class="mb-5">Големината на електричния заряд на електрона се нарича елементарен електричен заряд.
+                            Това е най-малкият електричен заряд, който една частица или тяло може да има.<br/>
+                            <img src="{{ asset('img/portfolio/electricity/formula_zarqd.png') }}" width="300" height="100"/>
+                        </p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                            <i class="fa fa-close"></i>
+                            Close</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal mfp-hide" id="ured">
+        <div class="portfolio-modal-dialog bg-white">
+            <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
+                <i class="fa fa-3x fa-times"></i>
+            </a>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-secondary text-uppercase mb-0">Окото като оптичен уред</h2>
+                        <hr class="star-dark mb-5">
+                        <p class="mb-5">В центъра на всеки атом има ядро, чиито размери са много по-малки от самия атом.
+                            В състава на ядрото участват частици, наречени протони, които имат положителен електричен заряд.
+                            Затова и ядрото, като цяло, има положителен заряд. Около ядрото се движат друг вид частици - електрони.
+                            Електронът е най-малката частица в атома и има отрицателен заряд.</p>
+
+                        <p class="mb-5">Електричните заряди са два вида, които условно наричаме положителни /+/ и отрицателни /-/.
+                            Два положителни или два отрицателни заряда се отблъскват, а положителен и отрицателен заряд се привличат. </p>
+
+                        <p class="mb-5">Електричният заряд е физична величина, която се означава с буквата q.
+                            Единицата за електричен заряд се нарича кулон и се означава с главна буква С.</p>
+
+                        <p class="mb-5">Големината на електричния заряд на електрона се нарича елементарен електричен заряд.
+                            Това е най-малкият електричен заряд, който една частица или тяло може да има.<br/>
+                            <img src="{{ asset('img/portfolio/electricity/formula_zarqd.png') }}" width="300" height="100"/>
+                        </p>
+                        <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
+                            <i class="fa fa-close"></i>
+                            Close</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     {% block javascripts %}
 
