--- a/ePlatform/app/Resources/views/tests/create.html.twig
+++ b/ePlatform/app/Resources/views/tests/create.html.twig
@@ -72,7 +72,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="article_title">Test Title</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="article_title" placeholder="Post Title"
+                            <input type="text" class="form-control" id="article_title" placeholder="Test Title"
                                    name="test[title]">
                         </div>
                     </div>
