последни промени(дано)
Смених началното лого и промених view-тата на login  и register.

--- a/ePlatform/app/Resources/views/index/index.html.twig
+++ b/ePlatform/app/Resources/views/index/index.html.twig
@@ -52,7 +52,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
         <div class="container">
-            <img class="img-fluid mb-5 d-block mx-auto" src="{{ asset('img/profile.png') }}" alt="">
+            <img class="img-fluid d-block mx-auto" src="{{ asset('img/logo.png') }}" alt="">
             <h1 class="text-uppercase mb-0">ePlatform</h1>
             <hr class="star-light">
             <h2 class="font-weight-light mb-0">Electronic platform for education</h2>
